# theiaSoftClipPrimers

./: .gitignore  README.md  primer_soft_clip.py  primers-edlib.bed  primers.fasta  pyproject.toml  test_primer_soft_clip.py
